--- a/app/views/admins/index.html.haml
+++ b/app/views/admins/index.html.haml
@@ -17,7 +17,7 @@
                   %th 合計送料
                   %th 合計金額
                 - else
-                  注文はありません!!!!。
+                  注文はありません-----。
               - @recentorders.each do |recentorder|
                 %tr
                   %td
