--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -88,7 +88,7 @@
       .btfContent1__desktop-billboard2
 
       .btfContent1__image-shoveler-ns
-        商品ラインアップ
+        商品ラインアップ(cap_test1)
       .btfContent1__uber-widget-ns-images
         - @stocks.each do |stock|
           = link_to image_tag(stock.image), stock_path(stock), width:200, height:200
