--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -13,7 +13,7 @@
       =image_tag "face_icon.png", width:50, height:50
       .hud-dashboard__a-section1__a
         - if user_signed_in?
-          こんにちは、
+          こんばんは、
           = current_user.nickname
           さん
         - else
