--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -33,6 +33,10 @@
         height: 46px;
         margin-top: 5px;
         float: left;
+        text-align: center;
+          img {
+            max-height: 44px;
+          }
         &__outer {
           // background-color: blue;
           width: 50px;
@@ -196,19 +200,39 @@
 
 
 .recommends{
-  padding-left: 100px;
+  padding: 0 100px;
   font-size: 20px;
   &__one{
     padding-bottom: 20px;
+      &__images {
+        .btfContent1__uber-widget-ns-images {
+          margin-top: 20px;
+        }
+      }
   }
   &__two{
     padding-bottom: 20px;
+    &__images {
+      .btfContent1__uber-widget-ns-images {
+        margin-top: 20px;
+      }
+    }
   }
   &__three{
     padding-bottom: 20px;
+    &__images {
+      .btfContent1__uber-widget-ns-images {
+        margin-top: 20px;
+      }
+    }
   }
   &__four{
     padding-bottom: 20px;
+    &__images {
+      .btfContent1__uber-widget-ns-images {
+        margin-top: 20px;
+      }
+    }
   }
 }
 
@@ -241,14 +265,41 @@
 
 
 .cartleftwindow{
-  padding-top: 10px;
+  padding: 15px 0 0 20px;
   float: left;
-  width: 1200px;
+  width: calc(100% - 330px);
   &__ad{
-    width: 1100px;
-    height: 150px;
+    width: 100%;
+    height: 90px;
     border: 1px solid;
     border-color: #d8d8d8;
+    padding: 10px;
+      &__card {
+        float: left;
+      }
+      &__new {
+        float: left;
+        margin: 8px 0 0 25px;
+          .card-title {
+            color: #0A3A80;
+            font-weight: bold;
+          }
+          .card-content {
+            color: #ffa502;
+            font-size: 18px;
+            font-weight: bold;
+          }
+          .card-detail {
+            font-size: 14px;
+            color: #000;
+          }
+      }
+      &__btn {
+        float: right;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+      }
   }
   &__title{
     padding-top: 10px;
@@ -258,7 +309,7 @@
     }
     &__right{
       float: right;
-      padding-right: 100px;
+      padding-right: 50px;
       font-size: 12px;
 
     }
@@ -267,7 +318,7 @@
   &__topborder{
     clear: both;
     padding-top: 10px;
-    padding-right: 100px;
+    padding-right: 45px;
     &__pricetext{
       float: left;
       padding-left: 800px;
@@ -337,8 +388,9 @@
     }
     &__quantityspace{
       float: left;
-      width: 150px;
-      padding-left: 100px;
+      position: relative;
+      left: 80px;
+      top: 15px;
       &__quantity{
       }
     }
@@ -406,7 +458,8 @@
   }
   &__subtotal{
     float: right;
-    padding-right: 120px;
+    padding-right: 45px;
+    margin-top: 25px;
     font-weight: bold;
     &__items{
       float: left;
@@ -420,7 +473,7 @@
   &__points{
     clear: both;
     text-align: right;
-    padding-right: 120px;
+    padding-right: 45px;
     padding-top: 10px;
     font-size: 12px;
   }
@@ -508,6 +561,8 @@
 }
 
 .cartleftwindow a{
+  display: block;
+  margin-right: 70px;
   color: #0000FF;
   text-decoration: none;
 }
