--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -3,3 +3,14 @@
   display: block;
   clear: both;
 }
+
+body{
+  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
+}
+
+a {
+  color: #0066c0;
+}
+a:hover {
+  color: #e47911;
+}
