--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -143,6 +143,7 @@ a {
       margin: 0 0 25px 20px;
         li {
           width: 29%;
+          height: 330px;
           border: none;
           border-bottom: 1px solid #ddd;
           float: left;
@@ -162,7 +163,8 @@ a {
           color: #0066c0;
           display: inline-block;
           position: relative;
-          top: -2px;
+          top: -5px;
+          margin-left: 5px;
         }
         &__img img {
           max-width: 300px;
@@ -198,12 +200,12 @@ a {
           top: -5px;
         }
         &__review {
-          span.review_stars {
+          .review_stars {
             display: inline-block;
-            background-image: image-url("ui_base.png");
             background-position: -574px 384px;
             width: 81px;
             height: 16px;
+              .rate:before, .rate:after { font-size: 16px }
 
           }
         }
@@ -213,7 +215,6 @@ a {
   // pagination
   .text-center {
     height: 40px;
-    // background: #eee;
     margin: 0 20px;
     text-align: center;
       .pagination {
@@ -268,7 +269,7 @@ a {
       }
       nav.pagination:before {
         content: '';
-        width: calc(100% - 260px);
+        width: calc(100% - 300px);
         height: 40px;
         background: #eee;
         position: absolute;
