--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -149,6 +149,7 @@
   width: 1200px;
   &__title{
     font-size: 32px;
+    margin-bottom: 30px;
   }
   &__topboxleft{
     float: left;
@@ -187,9 +188,20 @@
   clear: both;
   width: 100%;
   height: 300px;
-  border: 1px solid;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
   margin-bottom: 40px;
   border-color:  #DDDDDD;
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      margin: 10px 0 20px;
+      color: #000;
+    }
+    .btfContent1__uber-widget-ns-images {
+      margin: 0 60px;
+      border: none;
+    }
 }
 
 .unit1{
@@ -201,7 +213,7 @@
   height: 80px;
   &__boximage{
     float: left;
-    padding-left: 10px;
+    padding-left: 20px;
   }
 }
 .unit2{
@@ -213,7 +225,7 @@
   height: 80px;
   &__boximage{
     float: left;
-    padding-left: 10px;
+    padding-left: 25px;
   }
 }
 
@@ -238,9 +250,21 @@
   padding:  10px 0 10px 20px;
   margin: 30px 30px 30px 0;
 }
+.unit_boxname {
+  margin-left: 140px;
+}
+.unit_box > div:hover {
+  background: #eee;
+}
+.unit__boxname > span {
+  color: #000;
+}
+.unit__boxdetail {
+  color: #aaa;
+  font-size: 14px;
+}
 
 .mainwindow a{
-  color: #0000FF;
   text-decoration: none;
 }
 
@@ -583,23 +607,43 @@
 
 // マイストア
 .mystorefirstheader{
-  padding-top:70px;
-  width: 100%;
-  height: 25px;
+  height: 33px;
   background-color:  #fafafa;
+  padding-left: 30px;
+  border-bottom: 1px solid #DADADA;
+    .ul {
+      height: 33px;
+    }
+    .li{
+      float: left;
+      padding-right: 30px;
+      font-size: 12px;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .li:first-child {
+      font-weight: bold;
+    }
 }
 
 .mystoresecondheader{
   clear: both;
-  height: 80px;
+  height: 115px;
   background-color:  #f6f6f6;
+  padding: 30px 8px 0px 30px;
   &__avatar{
     float: left;
+      img {
+      border-radius: 50%;
+      }
   }
   &__name{
     float: left;
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
+    font-size: 22px;
+    font-weight: bold;
   }
   &__recentorder{
     float: left;
@@ -618,39 +662,63 @@
     float: left;
     padding-left: 30px;
   }
+  span:nth-of-type(1) {
+    font-size: 12px;
+    font-weight: bold;
+    color: #757575;
+  }
+  span:nth-of-type(2) {
+    font-size: 22px;
+  }
+  a {
+    color: #133981;
+    font-size: 12px;
+  }
+  a:hover {
+    color: #DF7728;
+  }
 }
 
 .mystoremainwindow{
   background-color: #EBEDED;
   padding-left: 20px;
-  height: 2000px;
+  padding-bottom: 50px;
   &__recommendtitle{
     font-size: 24px;
     padding:  20px 0 20px 0;
     text-align: center;
   }
   &__recommenditems{
-    width: 350px;
+    width: 300px;
     height: 350px;
     margin: 5px 5px 5px 5px;
     background-color: #FFFFFF;
     float: left;
     &__images{
       text-align: center;
+        a {
+          display: block;
+          width: 300px;
+          overflow: hidden;
+          margin: 0 auto;
+          margin-top: 30px;
+        }
+        img {
+          min-height: 230px;
+        }
     }
     &__title{
-      font-size: 16px;
+      font-size: 18px;
       text-align: center;
+      margin: 15px 0 5px;
     }
     &__count{
       font-size: 8px;
       text-align: center;
     }
   }
-}
-
-
-.li{
-  float: left;
-  padding-right: 30px;
+  &__recommendcontents {
+    width: 1250px;
+    margin: 0 auto;
+  }
 }
