--- a/app/views/orders/confirm.html.haml
+++ b/app/views/orders/confirm.html.haml
@@ -1,6 +1,6 @@
-.headlogo
-  = image_tag "loginlogo.png"
 .deliverybox
+  .headlogo
+    = image_tag "loginlogo.png"
   .deliverybox__title
     お届け先住所の選択
   .deliverybox__message
@@ -135,28 +135,29 @@
         クレジットカード以外の支払い方法
       .borderline
       .paymentbox__leftbox__nocredittogglelist
-        %input{type: "radio", name: "payments", value: "Cash"}代金引換
-        国内配送のみ。代引手数料がかかります。獲得したポイントは、支払い後に確定します。詳しくは
+        %input{type: "radio", name: "payments", value: "Transfer"}
+        銀行振込
+        国内配送のみ。獲得したポイントは、支払い後に確定します。詳しくは
         = link_to "こちら", ""
         をご確認ください。
         .br
-        コンビニ・ATM・ネットバンキング・電子マネー払い この注文にはご利用いただけません。
+        代金引換・コンビニ・ATM・ネットバンキング・電子マネー払い この注文にはご利用いただけません。
         = link_to "詳しくはこちら",""
       .paymentbox__leftbox__point-giftcardtitle
         Amazonポイント・Amazonギフト券
       .borderline
       .paymentbox__leftbox__point-giftcardtogglelist
         Amazonポイント：
-        n
+        0
         pt(
         ¥
-        n
+        0
         相当)
         .br
         今回の注文で利用可能なポイントを全て利用する：
-        n
+        0
         (¥
-        n
+        0
         相当)
         .br
         一部のポイントを利用する
@@ -204,17 +205,6 @@
         / =link_to "次に進む" , new_order_path, class: "nextbtn"
       .paymentbox__rightbottombox__message
         (注文の最終確認ができます)
-
-.giftbox
-  .giftbox__title
-    ギフトの選択
-  .giftbox__select
-    ギフトを選択してください。
-  .giftbox__package
-    ギフトパッケージをお選びください
-  .giftbox__message
-    ギフトメッセージをお書きください。
-
 
 .footermessage
   .borderline
