--- a/app/views/sub_categories/show.html.haml
+++ b/app/views/sub_categories/show.html.haml
@@ -1,12 +1,62 @@
 = render "shared/header"
-.sub_category
-  = @sub_category.name
-  .sub_category__list.clearfix
-    - @sub_category.stocks.each do |stock|
-      .sub_category__list__all
-        = link_to image_tag(stock.image), stock_path(stock)
-        .sub_category__list__name
-          = link_to stock.name, stock_path(stock)
-        .sub_category__list__price
-          = stock.sell_price
+.wrapper
+  .content.clearfix
+    = render "sidebar"
+    .sub_category__list.clearfix
+      .searchResult
+        .sub_category
+          %h2
+            = @sub_category.name
+        %ul.searchResult__ul.clearfix
+          - @sub_category.stocks.each do |stock|
+            %li.searchResult__ul__li
+              .searchResult__ul__li__img
+                = link_to stock_path(stock) do
+                  = image_tag "#{stock.image}"
+              .searchResult__ul__li__title
+                = link_to stock_path(stock) do
+                  %h2
+                    = stock.name
+              .searchResult__ul__li__brand
+                %span
+                  = stock.maker
+              .searchResult__ul__li__price
+                = link_to stock_path(stock) do
+                  %span ￥
+                  %span
+                    = stock.sell_price.to_s(:delimited)
+                = image_tag "prime_search_icon.png", width:49, height:15
+                .searchResult__ul__li__day
+                  %span.color-success 明日中
+                  %span にお届け
+              .searchResult__ul__li__review
+                = link_to "" do
+                  .search_result_star.review_stars
+                    - case review_rate_calc(stock.avg_review)
+                      - when "00"
+                        .rate.rate00
+                      - when nil
+                        .rate.rate00
+                      - when "05"
+                        .rate.rate05
+                      - when "10"
+                        .rate.rate10
+                      - when "15"
+                        .rate.rate15
+                      - when "20"
+                        .rate.rate20
+                      - when "25"
+                        .rate.rate25
+                      - when "30"
+                        .rate.rate30
+                      - when "35"
+                        .rate.rate35
+                      - when "40"
+                        .rate.rate40
+                      - when "45"
+                        .rate.rate45
+                      -else
+                        .rate.rate50
+                  %span.review_number
+                    = stock.reviews.count
 = render "shared/footer"
